_sass/components/tag.scss
.hashtags {
  padding: 0;
  margin: 1rem 0;
  font-size: 1rem;
  list-style-type: none;
}

.hashtag {
  display: inline;
  font-weight: normal;
  color: $primary-color;
}

.hashtag::before {
  content: '#';
}

